--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website of ntd</title>
 </head>
-<script>
-    alert('Hello world')
-
+<script src="./video7/video7.js">
 </script>
 
 <body>
