--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website of ntd</title>
 </head>
-<script>
-    alert('Hello world')
+<script src="video11/video11.js">
+   
 
 </script>
 
